# eos-evm-contract

./: .gitignore  .gitmodules  CMakeLists.txt  Chainlink Cooperation.md  Dockerfile  LICENSE  README.md  Web Wallet Integration.md  build.sh  evm.abi  mainnet-genesis.json
.github/workflows/: README.md  build-contract-test.sh  build-contract.sh  build-node.sh  contract-build.sh  contract.md  contract.yml  node.md  (+4 more)
cmd/: CMakeLists.txt  abi_utils.hpp  block_conversion_plugin.cpp  block_conversion_plugin.hpp  blockchain_plugin.cpp  blockchain_plugin.hpp  chain_state.hpp  channels.hpp  consensus.cpp  core_system_plugin.cpp  core_system_plugin.hpp  engine_plugin.cpp  engine_plugin.hpp  genesis.cpp  genesis.hpp  keosd_plugin.cpp  keosd_plugin.hpp  logger_plugin.cpp  logger_plugin.hpp  mock_receiver_plugin.cpp  mock_receiver_plugin.hpp  node.cpp  rpc.cpp  rpc_plugin.cpp  rpc_plugin.hpp  ship_receiver_plugin.cpp  ship_receiver_plugin.hpp  silk_engine_plugin.cpp  silk_engine_plugin.hpp  silkrpc_daemon.cpp  silkrpc_plugin.cpp  silkrpc_plugin.hpp  sys_plugin.cpp  sys_plugin.hpp  thread_pool.hpp  utils.hpp
cmd/contract_common/evm_common/: block_mapping.hpp
contract/: .gitignore  CMakeLists.txt  README.md  fix-data-segment.py
contract/include/evm_runtime/: config.hpp  engine.hpp  eosio.token.hpp  evm_contract.hpp  intrinsics.hpp  print_tracer.hpp  processor.hpp  state.hpp  tables.hpp  types.hpp
contract/include/evm_runtime/test/: block_info.hpp  config.hpp  engine.hpp
contract/src/: CMakeLists.txt  actions.cpp  admin_actions.cpp  processor.cpp  state.cpp  test_actions.cpp  utils.cpp
contract/tests/: CMakeLists.txt  account_id_tests.cpp  admin_actions_tests.cpp  antelope_token_tests.cpp  basic_evm_tester.cpp  basic_evm_tester.hpp  blockhash_tests.cpp  call_tests.cpp  contracts.hpp.in  eosio.system_tester.hpp  evm_runtime_tests.cpp  exec_tests.cpp  freeze_tests.cpp  gas_fee_tests.cpp  init_tests.cpp  main.cpp  mapping_tests.cpp  native_token_tester.hpp  native_token_tests.cpp  skip_list.txt  utils.hpp
contract/tests/contracts/eosio.system/: eosio.system.abi  eosio.system.wasm
contract/tests/contracts/evm_read_callback/: evm_read_callback.abi  evm_read_callback.cpp
contract/tests/contracts/solidity/: BlockNumTimestamp.sol  Distributor.sol  RevertTest.sol
contract/tests/silkworm/core/silkworm/chain/: config.hpp
contract/tests/silkworm/core/silkworm/execution/: evm.cpp
contract/tests/silkworm/node/silkworm/db/: access_layer.cpp
docs/: CEX_deployment_plan.md  Compilation_and_testing_Guild.md  compilation_and_testing_guide.md  deployment_plan.md  local_testnet_deployment_plan.md  public_testnet_deployment_plan.md
peripherals/gateway_proxy/tests/: CMakeLists.txt  counting_http_server.cpp  counting_http_server.hpp  http_cannon.cpp  http_cannon.hpp  main.cpp  mock_evm.cpp  mock_evm.hpp  nginx.cpp  nginx.hpp
product/: Audit - BlockSec.md  Audit - Sentnl.io.md  Developer Tutorial.md  EVM2EVM Bridge Cooperation.md  EVM2EVM Bridge Frontend Design.md  Nodes - Rollout & Airdrop & Initial.md  The Graph Cooperation.md  Token Economy Mechanism - Variable Simulation.md  TrustInTime.md  block_explorer.md  block_mapping.md  delegate_staking_contract.md  evm_token_bridge.md  evm_token_bridge_dust.md  external_fork_handling.md  gas_fee_algorithm.md  minimal_trustevm_upgrade_mech.md  product-brief-template.md  proxy_for_rpc.md  read_incentive_system_design.md  rpc-node-compatibility.md  staking_contract.md  staking_ui.md  testnet_launch.md  workload_verifier.md
shared/: CMakeLists.txt  record.hpp  tx_meta.hpp.in
silkrpc/: daemon.cpp
src/: CMakeLists.txt  actions.cpp  admin_actions.cpp  config_wrapper.cpp  state.cpp  test_actions.cpp  utils.cpp
stakingcontract/: MultiCall.sol  TestReportVerbose.md  TrustEVMStaking.sol  TrustEVMStakingV2.sol  TrustEVMStakingV2.t.sol  TrustEVMStakingV2_upgradeable.sol  readme.md  readme_upgradeable.md
testing-utils/: get_balance.py  send_data_via_cleos.py  send_via_cleos.py
tests/: CMakeLists.txt  account_id_tests.cpp  admin_actions_tests.cpp  basic_evm_tester.cpp  basic_evm_tester.hpp  blockhash_tests.cpp  bridge_emit_tests.cpp  bridge_message_tests.cpp  call_tests.cpp  chainid_tests.cpp  contracts.hpp.in  different_gas_token_tests.cpp  eosio.system_tester.hpp  evm_runtime_tests.cpp  exec_tests.cpp  gas_fee_tests.cpp  gas_param_tests.cpp  gas_prices_tests.cpp  init_tests.cpp  main.cpp  mapping_tests.cpp  native_token_tester.hpp  native_token_tests.cpp  rlp_encoding_tests.cpp  signature_tests.cpp  skip_list.txt  stack_limit_tests.cpp  statistics_tests.cpp  utils.hpp  version_tests.cpp
tests/contracts/core.vaulta/: system.abi  system.wasm
tests/contracts/eosio.system/: eosio.system.wasm
tests/contracts/evm_bridge_receiver/: README.txt  evm_bridge_receiver.abi  evm_bridge_receiver.cpp  evm_bridge_receiver.hpp  evm_bridge_receiver.wasm
tests/contracts/evm_read_callback/: evm_read_callback.hpp  evm_read_callback.wasm
tests/contracts/evm_runtime_wasm_0_5_1/: evm_runtime.abi  evm_runtime.wasm
tests/leap/: antelope_name.py  nodeos_eos_evm_server.py  nodeos_eos_evm_test.py  nodeos_trust_evm_fork_server.py  nodeos_trust_evm_server.py  nodeos_trust_evm_test.py
tests/leap/nodeos_eos_evm_server/: PERFORMANCE.md  extract-logtime-cmd.sh  hardhat.config.js  package.json  performance-measurements-0.5.0.md
tests/leap/nodeos_eos_evm_server/contracts/: BlockNum.sol  Blockhash.sol  Eventor.sol  Token.sol  WEOS.sol
tests/leap/nodeos_eos_evm_server/scripts/: deploy-blockhash.js  deploy-blocknum.js  deploy-token.js
tests/leap/nodeos_trust_evm_server/: hardhat.config.js  package.json
tests/leap/nodeos_trust_evm_server/contracts/: Recursive.sol
tests/leap/nodeos_trust_evm_server/scripts/: deploy-eventor.js  deploy-recursive.js  deploy-token.js  deploy-uniswap.js
tests/silkworm/core/silkworm/common/: util.hpp
tests/silkworm/core/silkworm/execution/: evm.hpp
tests/silkworm/core/silkworm/types/: transaction.cpp
ultratests/: eosevm.spec.ts  eosevm.ultra_test.js  evmSetup.ts  evm_setup.ts  package-lock.json  package.json  sign.ts  sign_ethraw.py
(+75 files in other folders)
